--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,10 @@
 #root {
   position: relative;
 }
-
+body.dark {
+  background-color: #181818; /* Dark mode background */
+  color: #eee; /* Dark mode text color */
+}
 .here {
   position: absolute;
   top: 0;
@@ -17,6 +20,10 @@
   z-index: -3;
   clip-path: polygon(20% 0, 100% 0, 100% 100%);
   background: #9ee8ff;
+}
+.here .dark{
+  
+  background: #1b1b1b !important;
 }
 
 .here2 {
